# Bolsa-de-Valores

./: .gitignore  Procfile  README.md  Requerimentos.txt  app.py  bolsa.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
