[tool.poetry]
name = "bolsa"
version = "0.1.0"
description = ""
authors = ["Falcon9749 <falcon.eletroinfo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
